--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,19 +38,19 @@ img {
 
 h1 {
   color:navy;
-  font-size:30px;
+  font-size:25px;
   text-align:center;
 }
 
 h2 {
   color:navy;
-  font-size:30px;
+  font-size:25px;
   text-align:center;
 }
 
 p {
   color:white;
-  font-size:20px;
+  font-size:15px;
 }
 
 ul {
@@ -88,7 +88,7 @@ ul li span {
 h3 {
   color:maroon;
   font-size:20px;
-  text-align:left;
+  text-align:center;
   padding:30px 20px;
 }
 
